Release MultiSpeed 1.0.3
